[workspace]
resolver = "2"

[package]
name = "exbrid"
version = "0.1.0"
edition = "2021"
authors = ["BlockDeep Labs <info@blockdeep.io>"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4", features = ["full"] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-discv5 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4", features = ["serde"] }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4", features = ["test-utils"] }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }

# alloy
alloy-eips = { version = "0.12", default-features = false }
alloy-genesis = { version = "0.12", default-features = false }
alloy-consensus = { version = "0.12", default-features = false }
alloy-rlp = "0.3.4"
alloy-rpc-types = { version = "0.12", features = [
	"eth",
], default-features = false }
alloy-signer = { version = "0.12", default-features = false }
alloy-signer-local = { version = "0.12", default-features = false }

alloy-primitives = { version = "0.8", default-features = false }
alloy-sol-types  = { version = "0.8", features = ["json"] }
foundry-blob-explorers = "0.11"

discv5 = "0.9"
enr = "0.13"
secp256k1 = { version = "0.30", default-features = false, features = [
	"global-context", "std", "recovery",
] }

# async
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# serde
serde = "1"
serde_json = "1"

# misc
eyre = "0.6"

# testing
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }


[dependencies]
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
reth-execution-types.workspace = true
futures-util.workspace = true
alloy-primitives.workspace = true

eyre.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true

# Subxt
smoldot-light = "0.17.1"
sp-core = "35.0.0"
sp-keyring = "40.0.0"
sp-runtime = "40.1.0"
codec = "0.0.6"
hex = { version = "0.4.3", default-features = false }
env_logger = "0.11.4"
smol = { version = "2.0.0" }
subxt = { version = "0.37.0", features = ["unstable-light-client"] }
subxt-signer = "0.37.0"
tracing-subscriber = "0.3.19"

[dev-dependencies]
reth-exex-test-utils.workspace = true
